@@ -3,6 +3,7 @@ libmpdclient 2.11 (not yet released)
 * detect getaddrinfo() at configure time
 * add support for ArtistSort and AlbumArtistSort tags
 * support MPD protocol 0.21
+  - audio format specifications "dsd64" etc.
   - the "sort" parameter for commands "find"/"search"
 
 libmpdclient 2.10 (2015/02/23)
